unpackaged/main/default/objects/Account/fields/ACCESS_EMail__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_EMail__c</fullName>
    <description>Used on Campus Accounts</description>
    <label>ACCESS EMail</label>
    <type>Email</type>
</CustomField>