unpackaged/main/default/objects/Account/fields/ACCESS_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_Phone__c</fullName>
    <description>Used for Campus Account records</description>
    <label>ACCESS Phone</label>
    <type>Phone</type>
</CustomField>