unpackaged/main/default/objects/Account/fields/Allow_Date_Updates_on_Applications__c.field-meta.xml
<CustomField>
    <fullName>Allow_Date_Updates_on_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to control a TDTM that will make important date changes update all existing child applications.</description>
    <inlineHelpText>This field is used to control a TDTM that will make important date changes update all existing child applications.</inlineHelpText>
    <label>Allow Date Updates on Applications</label>
    <type>Checkbox</type>
</CustomField>