unpackaged/main/default/objects/Account/fields/Application_Summary_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Application_Summary_Additional_Info__c</fullName>
    <description>Used to  place additional links for applicants to navigate. Displays in a lightning component in the community.</description>
    <inlineHelpText>Used to  place additional links for applicants to navigate. Displays in a lightning component in the community.</inlineHelpText>
    <label>Application Summary Additional Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>