unpackaged/main/default/objects/Account/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <description>Determines how the Applicant Facing Status will be updated on the application</description>
    <inlineHelpText>Determines how the Applicant Facing Status will be updated on the application</inlineHelpText>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolling</fullName>
            </value>
            <value>
                <fullName>Update on Publish Decision Date</fullName>
            </value>
            <value>
                <fullName>Manual Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>