unpackaged/main/default/objects/Account/fields/Number_of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credits__c</fullName>
    <label>Number of Credits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>