unpackaged/main/default/objects/Account/fields/PCA_Assigned_to_High_School__c.field-meta.xml
<CustomField>
    <fullName>PCA_Assigned_to_High_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCA Assigned to High School</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HighSchools</relationshipName>
    <type>Lookup</type>
</CustomField>