unpackaged/main/default/objects/Account/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <externalId>true</externalId>
    <label>Program Code</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>