unpackaged/main/default/objects/Account/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Program Name, used as Merge field for Pardot</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>