unpackaged/main/default/objects/Account/fields/Prospect_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Conversion_Rate__c</fullName>
    <description>The Percent of enrollment opportunities that went into the application stage</description>
    <formula>Total_Program_Opportunities__c / Total_Applicant_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Percent of enrollment opportunities that went into the application stage</inlineHelpText>
    <label>Prospect Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>