unpackaged/main/default/objects/Account/fields/Recruitment_Email__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Email__c</fullName>
    <description>Used for Educational Institution (Campus) Accounts</description>
    <label>Recruitment Email</label>
    <type>Email</type>
</CustomField>