unpackaged/main/default/objects/Account/fields/Recruitment_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Phone__c</fullName>
    <description>Only used for Educational Insitution (Campus) Accounts</description>
    <label>Recruitment Phone</label>
    <type>Phone</type>
</CustomField>