unpackaged/main/default/objects/Account/fields/simplesms__DoNotSMS__c.field-meta.xml
<CustomField>
    <fullName>simplesms__DoNotSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Messages will not be sent to this Account.</description>
    <inlineHelpText>Messages will not be sent to this Account.</inlineHelpText>
    <label>Do Not SMS (Account)</label>
    <type>Checkbox</type>
</CustomField>