unpackaged/main/default/objects/Account/fields/Starting_Term__c.field-meta.xml
<CustomField>
    <fullName>Starting_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Term record of Academic Program</description>
    <inlineHelpText>Lookup to the Term record of Academic Program</inlineHelpText>
    <label>Starting Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Academic Programs</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>