unpackaged/main/default/objects/Account/fields/Total_Applicant_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Applicant_Opportunities__c</fullName>
    <description>Field is used to determine how many opportunities lead to an application.</description>
    <inlineHelpText>Determines how many opportunities lead to an application.</inlineHelpText>
    <label>Total Applicant Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.traa_Is_Enrollment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Inquiry, Knead the Dough</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>