unpackaged/main/default/objects/Account/fields/Total_Program_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Opportunities__c</fullName>
    <description>The total opportunities created under a enrollment opportunity</description>
    <inlineHelpText>The total opportunities created under a enrollment opportunity</inlineHelpText>
    <label>Total Program Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.traa_Is_Enrollment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>