unpackaged/main/default/objects/Account/fields/traa_Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>traa_Application_Deadline__c</fullName>
    <description>Application submission deadline</description>
    <inlineHelpText>Application submission deadline</inlineHelpText>
    <label>Application Deadline</label>
    <type>Date</type>
</CustomField>