unpackaged/main/default/objects/Account/fields/traa_Application_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>traa_Application_Record_Types__c</fullName>
    <label>Application Record Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDA Application</fullName>
            </value>
            <value>
                <fullName>Academic Application</fullName>
                <default>true</default>
                <label>Academic Application</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>