unpackaged/main/default/objects/Account/fields/traa_Area__c.field-meta.xml
<CustomField>
    <fullName>traa_Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_of_Interest</valueSetName>
    </valueSet>
</CustomField>