unpackaged/main/default/objects/Account/fields/traa_Enrollment_Deadline__c.field-meta.xml
<CustomField>
    <fullName>traa_Enrollment_Deadline__c</fullName>
    <description>Deadline of the Enrollment</description>
    <inlineHelpText>Deadline of the Enrollment</inlineHelpText>
    <label>Enrollment Deadline</label>
    <type>Date</type>
</CustomField>