unpackaged/main/default/objects/Account/fields/traa_Level__c.field-meta.xml
<CustomField>
    <fullName>traa_Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associates</fullName>
            </value>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>Graduate Certificate</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>