unpackaged/main/default/objects/Account/fields/traa_Open_to_Application_Submissions__c.field-meta.xml
<CustomField>
    <fullName>traa_Open_to_Application_Submissions__c</fullName>
    <description>Academic Program is open to Application Submission or not?</description>
    <inlineHelpText>Academic Program is open to Application Submission or not?</inlineHelpText>
    <label>Open to Application Submissions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Template being created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>