unpackaged/main/default/objects/Account/fields/traa_Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_Program_End_Date__c</fullName>
    <description>Date Program Ended</description>
    <inlineHelpText>Date Program Ended</inlineHelpText>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>