unpackaged/main/default/objects/Account/fields/traa_Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_Program_Start_Date__c</fullName>
    <description>Date Program Started</description>
    <inlineHelpText>Date Program Started</inlineHelpText>
    <label>Program Start Date</label>
    <type>Date</type>
</CustomField>