unpackaged/main/default/objects/Account/recordTypes/College_Department.recordType-meta.xml
<RecordType>
    <fullName>College_Department</fullName>
    <active>true</active>
    <description>A department in the educational institution.</description>
    <label>College Department</label>
</RecordType>