unpackaged/main/default/objects/Account/recordTypes/External_Educational_Institution.recordType-meta.xml
<RecordType>
    <fullName>External_Educational_Institution</fullName>
    <active>true</active>
    <description>External educational institution where a student might have an external degree from.</description>
    <label>External Educational Institution</label>
</RecordType>