unpackaged/main/default/objects/Account/listViews/All_Academic_Programs.listView-meta.xml
<ListView>
    <fullName>All_Academic_Programs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Program_Code__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Academic_Program</value>
    </filters>
    <label>All Academic Programs</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>