unpackaged/main/default/objects/Account/listViews/External_Educational_Institutions.listView-meta.xml
<ListView>
    <fullName>External_Educational_Institutions</fullName>
    <columns>Campus_Assigned_to_High_School__c</columns>
    <columns>PCA_Assigned_to_High_School__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>hed__Primary_Contact__c</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>hed__School_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.External_Educational_Institution</value>
    </filters>
    <label>External Educational Institutions</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>