unpackaged/main/default/objects/Account/listViews/MDC_Campuses.listView-meta.xml
<ListView>
    <fullName>MDC_Campuses</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>hed__School_Code__c</columns>
    <columns>Recruitment_Email__c</columns>
    <columns>Recruitment_Phone__c</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Educational_Institution</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Miami Dade College</value>
    </filters>
    <label>MDC Campuses</label>
</ListView>