unpackaged/main/default/objects/Account/listViews/North_Feeder_High_Schools.listView-meta.xml
<ListView>
    <fullName>North_Feeder_High_Schools</fullName>
    <columns>Campus_Assigned_to_High_School__c</columns>
    <columns>PCA_Assigned_to_High_School__c</columns>
    <columns>hed__School_Code__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Educational_Institution</value>
    </filters>
    <filters>
        <field>PCA_Assigned_to_High_School__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Campus_Assigned_to_High_School__c</field>
        <operation>equals</operation>
        <value>North</value>
    </filters>
    <label>North Feeder High Schools</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>